--- a/burger-menu-00/css/burger-menu.css
+++ b/burger-menu-00/css/burger-menu.css
@@ -304,8 +304,8 @@ main:focus {
 
 .burger-menu[enabled='true'][status='open'] .burger-menu__panel {
   visibility: visible;
-  opacity: 1;
   transition: opacity 400ms ease;
+  opacity: 1;
 
   /*
   When the panel is “open”, we transition the opacity to 1 and set visibility to visible to show it.
@@ -322,10 +322,9 @@ main:focus {
 }
 
 .burger-menu[enabled='true'][status='open'] .burger-menu__panel > * {
+  transition: transform 500ms cubic-bezier(0.17, 0.67, 0, 0.87) 400ms, opacity 500ms ease 400ms;
   transform: translateY(0);
   opacity: 1;
-  transition: transform 500ms cubic-bezier(0.17, 0.67, 0, 0.87) 700ms, opacity 500ms ease
-      800ms;
 
   /*
   When the panel is in the “open” state, we transition them back to being visible with full opacity.
