--- a/burger-menu/burger-menu-01/style.css
+++ b/burger-menu/burger-menu-01/style.css
@@ -11,6 +11,7 @@ body {
   width: 50px;
   height: 40px;
 }
+
 .burger-wrapper .hamburger {
   background: black;
   width: 50px;
@@ -19,7 +20,9 @@ body {
   transition: background 10ms 300ms ease;
   transform: translateY(20px);
 }
-.burger-wrapper .hamburger:before, .burger-wrapper .hamburger:after {
+
+.burger-wrapper .hamburger:before,
+.burger-wrapper .hamburger:after {
   transition: top 300ms 350ms ease, transform 300ms 50ms ease;
   position: absolute;
   background: black;
@@ -27,9 +30,11 @@ body {
   height: 5px;
   content: "";
 }
+
 .burger-wrapper .hamburger:before {
   top: -15px;
 }
+
 .burger-wrapper .hamburger:after {
   top: 15px;
 }
@@ -37,13 +42,17 @@ body {
 .menu-trigger:checked ~ .burger-wrapper .hamburger {
   background: transparent;
 }
-.menu-trigger:checked ~ .burger-wrapper .hamburger:after, .menu-trigger:checked ~ .burger-wrapper .hamburger:before {
+
+.menu-trigger:checked ~ .burger-wrapper .hamburger:after,
+.menu-trigger:checked ~ .burger-wrapper .hamburger:before {
   transition: top 300ms 50ms ease, transform 300ms 350ms ease;
   top: 0;
 }
+
 .menu-trigger:checked ~ .burger-wrapper .hamburger:before {
   transform: rotate(45deg);
 }
+
 .menu-trigger:checked ~ .burger-wrapper .hamburger:after {
   transform: rotate(-45deg);
 }
