--- a/components/footer/footer-styles.css
+++ b/components/footer/footer-styles.css
@@ -2,7 +2,7 @@
 /* ~~~ Footer Tempate ~~~ */
 /* ~~~~~~~~~~~~~~~~~~~~~~ */
 
-/* ~~~ Global Styles ~~~ */
+/* ~~~ Global Styles & Resets ~~~ */
 
 *,
 *::before,
@@ -15,14 +15,14 @@ html {
   line-height: 1.5;
 }
 
+/* ~~~ Semantic HTML Elements ~~~ */
+
 body {
   min-height: 100vh;
   background-color: #ddd;
   display: grid;
   place-items: center;
 }
-
-/* ~~~ Semantic HTML Elements ~~~ */
 
 h3 {
   font-size: 1.5rem;
