--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -12,11 +12,19 @@
 <body>
 
   <footer>
-    <section class="masthead container grid">
+    <section class="masthead container flex flex--space-between debug-border">
 
-      <div class="logo"></div>
+      <div class="logo-container">
+        <img src="" alt="Alt text" width="300" height="400" class="logo"></img>
+      </div>
 
-      <div class="contact-info"></div>
+      <nav class="contact-info text-right">
+        <ul>
+          <li><address>123 Main St.<br>Anytown, USA 99999</address></li>
+          <li><a href="tel:+05890000111">(589) 000-0111</a></li>
+          <li><a href="mailto:address@email.com">Email Us</a></li>
+        </ul>
+      </nav>
 
     </section>
   </footer>
