Eliminate unnecessary classes and media queries; Use flex wrap and gap for layout; Store margin utility class for later use

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -12,19 +12,19 @@
 <body>
 
   <footer>
-    <section class="masthead container flex flex--space-between debug-border">
+    <section class="flex flex--wrap flex--gap-sm">
 
       <div class="logo-container">
         <img src="" alt="Alt text" width="300" height="400" class="logo"></img>
       </div>
 
-      <nav class="contact-info text-right">
+      <address class="contact-info">
         <ul>
-          <li><address>123 Main St.<br>Anytown, USA 99999</address></li>
+          <li>123 Main St.<br>Anytown, USA 99999</li>
           <li><a href="tel:+05890000111">(589) 000-0111</a></li>
           <li><a href="mailto:address@email.com">Email Us</a></li>
         </ul>
-      </nav>
+      </address>
 
     </section>
   </footer>
