--- a/components/footer/footer-styles.css
+++ b/components/footer/footer-styles.css
@@ -20,8 +20,8 @@ html {
 body {
   min-height: 100vh;
   background-color: #ddd;
-  display: grid;
-  place-items: center;
+  display: flex; /* grid also works */
+  place-items: end;
 }
 
 h3 {
@@ -48,6 +48,13 @@ img {
 }
 
 /* ~~~ Utility Classes ~~~ */
+
+/* Margin */
+
+.margin-left--auto {
+  /* Pushes content to the right edge of container */
+  margin-left: auto;
+}
 
 /* Text Alignment */
 
@@ -76,6 +83,10 @@ img {
 .flex--centered {
   justify-content: center;
   align-items: center;
+}
+
+.flex--wrap {
+  flex-wrap: wrap;
 }
 
 .flex--space-between {
@@ -110,40 +121,15 @@ footer a {
   color: gold;
 }
 
-.masthead {
-  height: 100%;
-  width: 100%;
-}
-
-.logo {}
-
 .logo-container {
   aspect-ratio: 3/4;
 }
 
 /* ~~~ MEDIA QUERIES ~~~ */
 
-/* Tablets & Smaller */
+/* None */
 
-@media only screen and (max-width: 768px) {
-
-  .flex {
-    flex-direction: column;
-  }
-
-  .masthead {
-    text-align: center;
-  }
-
-  .logo-container {
-    display: grid;
-    place-items: center;
-    width: 100%;
-  }
-
-}
-
-/* ~~~ Debug Styles ~~~ */
+/* ~~~ DEBUG STYLES ~~~ */
 
 .debug-border {
   border: 1px solid salmon;
