Clarify logo alt text

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -15,7 +15,7 @@
     <section class="flex flex--wrap flex--gap-sm">
 
       <div class="logo-container">
-        <img src="" alt="Alt text" width="300" height="400" class="logo"></img>
+        <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
       </div>
 
       <address class="contact-info">
