Add footer navigation

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -26,6 +26,16 @@
         </ul>
       </address>
 
+      <nav class="footer-links" aria-label="Main">
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/work">Work</a></li>
+          <li><a href="/people">People</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </nav>
+
     </section>
   </footer>
 
