--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -26,7 +26,7 @@
         </ul>
       </address>
 
-      <nav class="footer-links" aria-label="Main">
+      <nav class="footer-links grid center-grid" aria-label="Main">
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
