Expand centering and alignment utility classes; Relocate debug styles to its own file; Update html accordingly

--- a/components/footer/footer-styles.css
+++ b/components/footer/footer-styles.css
@@ -56,13 +56,28 @@ img {
   margin-left: auto;
 }
 
+.margin-right--auto {
+  /* Pushes content to the left edge of container */
+  margin-right: auto;
+}
+
 /* Text Alignment */
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
 
 .text-right {
   text-align: right;
 }
 
-/* Flexbox */
+/* ~~~~~~~ */
+/* FLEXBOX */
+/* ~~~~~~~ */
 
 .flex {
   display: flex;
@@ -80,11 +95,6 @@ img {
   flex-direction: column;
 }
 
-.flex--centered {
-  justify-content: center;
-  align-items: center;
-}
-
 .flex--wrap {
   flex-wrap: wrap;
 }
@@ -93,19 +103,87 @@ img {
   justify-content: space-between;
 }
 
-.flex--gap-sm {
+/* Flex Centering */
+
+.flex--center {
+  justify-content: center;
+  align-items: center;
+}
+
+.flex--center {
+  justify-content: center;
+  align-items: center;
+}
+
+.flex--center {
+  justify-content: center;
+  align-items: center;
+}
+
+/* ~~~~ */
+/* GRID */
+/* ~~~~ */
+
+.grid {
+  display: grid;
+}
+
+/* Grid Centering */
+
+.grid-center {
+  place-items: center;
+}
+
+.self-center {
+  place-self: center;
+}
+
+/* Centering without Flex or Grid */
+
+.center-horizontal {
+  /* Center Horizontal-Only */
+  margin: 0 auto;
+}
+
+.center-vertical {
+  /* Center Vertical-Only */
+  display: block;
+  align-content: center;
+}
+
+/* Gap */
+
+.gap-xxs {
+  gap: 0.5rem;
+}
+
+.gap-xs {
+  gap: 1rem;
+}
+
+.gap-sm {
   gap: 2rem;
 }
 
-.flex--gap-md {
+.gap-md {
   gap: 4rem;
 }
 
-.flex--gap-lg {
+.gap-lg {
   gap: 6rem;
 }
 
+.gap-xl {
+  gap: 8rem;
+}
+
+.gap-xxl {
+  gap: 10rem;
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~ */
 /* ~~~ Project Classes ~~~ */
+/* ~~~~~~~~~~~~~~~~~~~~~~~ */
 
 /* Footer Component Styles */
 
@@ -126,11 +204,3 @@ footer a {
 }
 
 /* ~~~ MEDIA QUERIES ~~~ */
-
-/* None */
-
-/* ~~~ DEBUG STYLES ~~~ */
-
-.debug-border {
-  border: 1px solid salmon;
-}
