--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="/css/css-resets/reset.css">
+  <link rel="stylesheet" href="/css/css-debug/debug.css">
   <link rel="stylesheet" href="footer-styles.css">
 </head>
 
@@ -26,7 +27,7 @@
         </ul>
       </address>
 
-      <nav class="footer-links grid center-grid" aria-label="Main">
+      <nav class="footer-links grid grid-center" aria-label="Main">
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
