--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -13,21 +13,24 @@
 <body>
 
   <footer>
-    <section class="flex flex--wrap flex--gap-sm">
+    <section class="flex flex--wrap gap-md">
 
-      <div class="logo-container">
-        <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
-      </div>
+      <section class="masthead flex flex--wrap gap-sm">
 
-      <address class="contact-info">
-        <ul>
-          <li>123 Main St.<br>Anytown, USA 99999</li>
-          <li><a href="tel:+05890000111">(589) 000-0111</a></li>
-          <li><a href="mailto:address@email.com">Email Us</a></li>
-        </ul>
-      </address>
+        <div class="logo-container">
+          <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
+        </div>
 
-      <nav class="footer-links grid grid-center" aria-label="Main">
+        <address class="contact-info">
+          <ul>
+            <li>123 Main St.<br>Anytown, USA 99999</li>
+            <li><a href="tel:+05890000111">(589) 000-0111</a></li>
+            <li><a href="mailto:address@email.com">Email Us</a></li>
+          </ul>
+        </address>
+      </section>
+
+      <nav class="footer-links" aria-label="Main">
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
@@ -41,4 +44,5 @@
   </footer>
 
 </body>
+
 </html>
