Add new css files, modify folder structure and separate concerns; Create section component template; Update footer component stylesheet links

--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -4,16 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/css/css-resets/reset.css">
-  <link rel="stylesheet" href="/css/css-debug/debug.css">
-  <link rel="stylesheet" href="footer-styles.css">
+  <title>Footer Template</title>
+  <link rel="stylesheet" href="/css/resets/reset.css">
+  <link rel="stylesheet" href="/css/semantic-html/semantic.css">
+  <link rel="stylesheet" href="/css/utilities/utilities.css">
+  <link rel="stylesheet" href="/css/global/global.css">
+  <link rel="stylesheet" href="/css/components/footer.css">
+  <link rel="stylesheet" href="/css/debug/debug.css">
 </head>
 
-<body>
+<body class="flex place-end">
 
-  <footer>
-    <section class="flex flex--wrap gap-md">
+  <footer class="flex flex--wrap gap-md">
 
       <section class="masthead flex flex--wrap gap-sm">
 
@@ -40,7 +42,6 @@
         </ul>
       </nav>
 
-    </section>
   </footer>
 
 </body>
