--- a/css/global/global.css
+++ b/css/global/global.css
@@ -42,7 +42,7 @@
   --font-size-4xl: 3rem;
 
   /* Project-specific fonts */
-  --font-sans: "Roboto", "Segoe UI", "Hind", "Helvetica Neue", Helvetica, Arial,
+  --font-sans: "Work Sans", "Roboto", "Segoe UI", "Hind", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
   --font-code: "Source Code Pro", monospace;
   --font-serif: "Source Serif 4", "Times New Roman", serif;
