--- a/css/utilities/utilities.css
+++ b/css/utilities/utilities.css
@@ -1,53 +1,6 @@
-/* ~~~~~~~~~~~~~~~~~~~~~~ */
-/* ~~~ Footer Tempate ~~~ */
-/* ~~~~~~~~~~~~~~~~~~~~~~ */
-
-/* ~~~ Global Styles & Resets ~~~ */
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  font-family: "Work Sans", sans-serif;
-}
-
-html {
-  line-height: 1.5;
-}
-
-/* ~~~ Semantic HTML Elements ~~~ */
-
-body {
-  min-height: 100vh;
-  background-color: #ddd;
-  display: flex; /* grid also works */
-  place-items: end;
-}
-
-h3 {
-  font-size: 1.5rem;
-  margin: 0;
-}
-
-p {
-  margin-bottom: 0;
-}
-
-hr {
-  border: 1px solid black;
-}
-
-img {
-  color: black;
-  background-color: #bcbcbc;
-  display: grid;
-  place-items: center;
-  object-fit: contain;
-  border: 2px solid black;
-  padding: 1em;
-}
-
+/* ~~~~~~~~~~~~~~~~~~~~~~~ */
 /* ~~~ Utility Classes ~~~ */
+/* ~~~~~~~~~~~~~~~~~~~~~~~ */
 
 /* Margin */
 
@@ -151,6 +104,12 @@ img {
   align-content: center;
 }
 
+/* Placement */
+
+.place-end {
+  place-items: end;
+}
+
 /* Gap */
 
 .gap-xxs {
@@ -180,27 +139,3 @@ img {
 .gap-xxl {
   gap: 10rem;
 }
-
-/* ~~~~~~~~~~~~~~~~~~~~~~~ */
-/* ~~~ Project Classes ~~~ */
-/* ~~~~~~~~~~~~~~~~~~~~~~~ */
-
-/* Footer Component Styles */
-
-footer {
-  min-height: 20vh;
-  width: 100%;
-  padding: 4em;
-  background: #343434;
-  color: #ddd
-}
-
-footer a {
-  color: gold;
-}
-
-.logo-container {
-  aspect-ratio: 3/4;
-}
-
-/* ~~~ MEDIA QUERIES ~~~ */
