--- a/components/section/section.html
+++ b/components/section/section.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Section Template</title>
   <link rel="stylesheet" href="/css/resets/reset.css">
-  <link rel="stylesheet" href="/css/semantic-html/semantic.css">
   <link rel="stylesheet" href="/css/utilities/utilities.css">
   <link rel="stylesheet" href="/css/global/global.css">
   <link rel="stylesheet" href="/css/components/section.css">
@@ -18,16 +17,27 @@
     
     <h2>Section Heading</h2>
 
-    <section class="flex flex--wrap gap-md">
+    <div class="flex flex--wrap gap-md">
 
       <div class="container">
         <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
       </div>
 
-    </section>
+      <div class="container">
+        <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
+      </div>
+
+      <div class="container">
+        <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
+      </div>
+
+      <div class="container">
+        <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
+      </div>
+
+    </div>
 
   </section>
-
 
 </body>
 
