--- a/css/global/global.css
+++ b/css/global/global.css
@@ -56,17 +56,31 @@
 ~~~ HTML Semantic Elements ~~~
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-/*  ~~ Set Default Fonts ~~  */
+/*  ~~ Defaults ~~  */
 html {
   font-family: var(--font-sans);
 }
 
 body {
   background-color: #ddd;
+  color: var(--color-dark);
   font-weight: 400;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol {
+  margin-bottom: 1em;
+}
+
 /*  ~~ Headings ~~  */
+
 h1,
 h2,
 h3,
@@ -74,8 +88,6 @@ h4,
 h5,
 h6 {
   font-family: var(--font-headings);
-  color: var(--color-dark);
-  margin-bottom: 0.5rem;
 }
 
 h1 {
@@ -86,31 +98,26 @@ h1 {
 h2 {
   font-size: var(--font-size-3xl);
   font-weight: 500;
-  margin-bottom: 0.75rem;
 }
 
 h3 {
   font-size: var(--font-size-2xl);
   font-weight: 500;
-  margin-bottom: 0.5rem;
 }
 
 h4 {
   font-size: var(--font-size-xl);
   font-weight: 500;
-  margin-bottom: 0.5rem;
 }
 
 h5 {
   font-size: var(--font-size-lg);
   font-weight: 400;
-  margin-bottom: 2rem;
 }
 
 h6 {
   font-size: var(--font-size-md);
   font-weight: 300;
-  margin-bottom: 2rem;
 }
 
 /*  ~~ Paragraphs and Lists ~~  */
@@ -119,8 +126,6 @@ ul,
 ol {
   font-family: var(--font-body);
   font-size: var(--font-size-md);
-  line-height: 1.6;
-  margin-bottom: 1em;
 }
 
 /*  ~~ List Items ~~  */
