Remove image containers;  Wrap section content within centered container; Add container class to component styles; Set inner content margin inline; Modify utility class names

--- a/css/utilities/utilities.css
+++ b/css/utilities/utilities.css
@@ -58,18 +58,16 @@
 
 /* Flex Centering */
 
-.flex--center {
+.flex--center-x {
+  justify-content: center;
+}
+
+.flex--center-xy {
   justify-content: center;
   align-items: center;
 }
 
-.flex--center {
-  justify-content: center;
-  align-items: center;
-}
-
-.flex--center {
-  justify-content: center;
+.flex--center-y {
   align-items: center;
 }
 
@@ -83,11 +81,11 @@
 
 /* Grid Centering */
 
-.grid-center {
+.grid--center {
   place-items: center;
 }
 
-.self-center {
+.self--center {
   place-self: center;
 }
 
