--- a/components/section/section.html
+++ b/components/section/section.html
@@ -14,29 +14,22 @@
 
 <body>
   <section>
+
     
-    <h2>Section Heading</h2>
-
-    <div class="flex flex--wrap gap-md">
-
-      <div class="container">
-        <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
+    <div class="container--main">
+      <h2>Section Heading</h2>
+      <div class="flex flex--center-x" style="margin-bottom: 2rem;">
+      
+        <div class="flex flex--wrap gap-md">
+            <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
+            <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
+            <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
+            <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
+        </div>
+      
       </div>
-
-      <div class="container">
-        <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
-      </div>
-
-      <div class="container">
-        <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
-      </div>
-
-      <div class="container">
-        <img src="" alt="Logo alt text" width="300" height="400" class="logo"></img>
-      </div>
-
+      <p>This section will center the main group of content. As the viewport width shrinks, interior items will wrap to the start of their container.</p>
     </div>
-
   </section>
 
 </body>
