Modify footer layout; Modify footer styles and add contact-info rules; Move container class from section css to utilities; Remove default list font sizes from global css; Reformat utilities and add new classes

--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -12,10 +12,20 @@ footer {
   color: #ddd
 }
 
+footer ul {
+  margin-bottom: 0;
+}
+
 footer a {
   color: gold;
 }
 
 .logo-container {
   aspect-ratio: 3/4;
+  max-width:100%;
+  max-height:100%;
+}
+
+.contact-info {
+  align-self: flex-end
 }
