--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -6,16 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Footer Template</title>
   <link rel="stylesheet" href="/css/resets/reset.css">
-  <link rel="stylesheet" href="/css/semantic-html/semantic.css">
-  <link rel="stylesheet" href="/css/utilities/utilities.css">
   <link rel="stylesheet" href="/css/global/global.css">
+  <link rel="stylesheet" href="/css/utilities/utilities.css">
   <link rel="stylesheet" href="/css/components/footer.css">
   <link rel="stylesheet" href="/css/debug/debug.css">
 </head>
 
 <body class="flex place-end">
 
-  <footer class="flex flex--wrap gap-md">
+  <footer>
+
+    <div class="container--main flex flex--wrap gap-lg flex--space-between">
+
+      <nav class="footer-links font-xl flex" aria-label="Main">
+        <ul class="height-100 flex flex--column flex--space-between">
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/work">Work</a></li>
+          <li><a href="/people">People</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </nav>
 
       <section class="masthead flex flex--wrap gap-sm">
 
@@ -31,16 +42,7 @@
           </ul>
         </address>
       </section>
-
-      <nav class="footer-links" aria-label="Main">
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/work">Work</a></li>
-          <li><a href="/people">People</a></li>
-          <li><a href="/contact">Contact</a></li>
-        </ul>
-      </nav>
+    </div>
 
   </footer>
 
