--- a/css/components/carousel.css
+++ b/css/components/carousel.css
@@ -2,22 +2,6 @@
 /* ~~~ Carousel Style Template ~~~ */
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-/* Grid area classes */
-
-.img-full { 
-  display: block;
-  grid-area: img-full;
-}
-.thumbnails { 
-  display: block;
-  grid-area: thumbnails;
-}
-.caption { 
-  grid-area: caption;
-}
-.empty {
-  grid-area: empty;
-}
 
 section {
   min-height: 20vh;
@@ -29,24 +13,60 @@ section {
 
 .carousel {
   display: grid;
-  grid-template-columns: 768px 1fr;
-  grid-template-rows: 20px;
-  grid-template-areas:
-  'img-full img-full img-full img-full thumbnails'
-  'img-full img-full img-full img-full thumbnails'
-  'img-full img-full img-full img-full thumbnails'
-  'caption caption caption caption empty';
-  grid-gap: 1rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-gap: 1rem 0;
+  margin-bottom: 8em;
 }
 
-.carousel > div {
-  background-color: rgba(255, 255, 255, 0.8);
+/* Enlarged Figure */
+
+.img-full {
+  grid-column: 1 / span 4;
+  grid-row: 1 / span 5;
+}
+
+.img-full img {
+  max-width: 100%;
+  height: 100%;
+  aspect-ratio: 16/9;
+  border: 2px solid #343434;
+}
+
+figcaption {
+  display: block;
+  padding-top: 1em;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  width: 50ch;
+}
+
+/* Thumbnails */
+
+.thumbnails {
+  grid-column: 5;
+  grid-row: 1 / span 5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.thumbnails:last-child {
+  border-bottom: 2px solid #343434;
 }
 
 img.thumbnail {
-  display: block;
-  aspect-ratio: 4/3;
+  display: grid;
+  /* aspect-ratio: 1/1; */
+  place-items: center;
+  height: 100%;
+  width: 100%;
+  border-top: 2px solid #343434;
+  border-right: 2px solid #343434;
 }
+
 
 /* ~~~~~~~~~~~~~~~~~~ New Styles from CodePen ~~~~~~~~~~~~~~~~~ */
 /* section {
